# GhostRun

./: .gitignore  CMakeLists.txt  vcpkg.json
.claude/worktrees/practical-blackwell/.claude/: settings.local.json
include/: aes.hpp  loader.hpp  steg.hpp  utils.hpp
src/builder/: main.cpp
src/runner/: loader.cpp  main.cpp
src/shared/: aes.cpp  steg.cpp  utils.cpp
